# pyroll-linear-thermal-expansion

./: README.md  hatch.toml  pyproject.toml
docs/: docs.md
pyroll/: linear_thermal_expansion.py
tests/: test_solve.py  test_solve3.py
